# IRONSmith

./: .gitignore  CMakeLists.txt  CMakePresets.json  Capstone-Product-Spec.md  README.md
src/: CMakeLists.txt
src/aiecad_compiler/: GUI_XML_Structure_Guide.md  README.md  __init__.py  main.py
src/aiecad_compiler/codegen/backends/: CodeGenerator.py  __init__.py
src/aiecad_compiler/diagnostics/: diagnostics.py
src/aiecad_compiler/extension/: CodeGeneratorExtender.py  ExtensionManager.py  GraphExtender.py
src/aiecad_compiler/graph_builder/: GraphDriver.py  XMLGenerator.py
src/aiecad_compiler/hlir/: HLIR_IMPLEMENTATION_SUMMARY.md  README.md  builder.py  builder_result.py  core.py  gui_serializer.py  operations.py  serializer.py
src/app/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/code_gen_bridge/: CMakeLists.txt  CodeGenBridge.cpp  CodeGenBridge.hpp  README.md  example_usage.cpp
src/libs/extension_system/: CMakeLists.txt  ExtensionSystemGlobal.cpp  ExtensionSystemGlobal.hpp  IPlugin.cpp  IPlugin.hpp  PluginManager.cpp  PluginManager.hpp  PluginSpec.cpp  PluginSpec.hpp
src/libs/extensionsystem/: CMakeLists.txt  IPlugin.hpp  PluginManager.cpp  PluginManager.hpp  PluginSpec.cpp  PluginSpec.hpp
src/libs/hlir_cpp_bridge/: CMakeLists.txt  HlirBridge.cpp  HlirBridge.hpp  HlirComponents.hpp  HlirTypes.hpp  README.md  example_usage.cpp
src/libs/hlir_cpp_bridge/python/: hlir_bridge_wrapper.py
src/libs/utils/: CMakeLists.txt  Comparisons.hpp  DocumentBundle.cpp  DocumentBundle.hpp  Environment.hpp  EnvironmentQtPolicy.cpp  EnvironmentQtPolicy.hpp  Macros.hpp  PathUtils.cpp  PathUtils.hpp  Result.hpp  ScopeGuard.hpp  StrongId.hpp  TreeChangeSet.hpp  TreeIds.hpp  TreeIndex.hpp  UtilsGlobal.hpp  VirtualPath.cpp  VirtualPath.hpp
src/libs/utils/async/: AsyncTask.hpp  DebouncedInvoker.hpp
src/libs/utils/contextmenu/: ContextMenu.cpp  ContextMenu.hpp
src/libs/utils/filesystem/: FileSystemUtils.cpp  FileSystemUtils.hpp  JsonFileUtils.cpp  JsonFileUtils.hpp  PathPatternMatcher.cpp  PathPatternMatcher.hpp  RecursiveFileSystemWatcher.cpp  RecursiveFileSystemWatcher.hpp
src/libs/utils/tests/: CMakeLists.txt  ContextMenuTests.cpp  DocumentBundleTests.cpp  EnvironmentTests.cpp  FileSystemUtilsTests.cpp  GridLayoutTests.cpp  PathPatternMatcherTests.cpp  PathUtilsTests.cpp  StrongIdTests.cpp  TreeChangeSetTests.cpp  TreeIndexTests.cpp  VirtualPathTests.cpp
src/libs/utils/ui/: BaseDialog.cpp  BaseDialog.hpp  ColorSwatchButton.cpp  ColorSwatchButton.hpp  ConfirmationDialog.cpp  ConfirmationDialog.hpp  FormDialog.cpp  FormDialog.hpp  GridLayout.cpp  GridLayout.hpp  GridSpec.hpp  LabeledSlider.cpp  LabeledSlider.hpp  SidebarPanelFrame.cpp  SidebarPanelFrame.hpp
src/plugins/: CMakeLists.txt
src/plugins/aieplugin/: AieCanvasCoordinator.cpp  AieCanvasCoordinator.hpp  AieConstants.hpp  AieDeviceTopologies.json  AieGlobal.hpp  AiePlugin.ForwardDecls.cpp  AiePlugin.Runtime.cpp  AiePlugin.Ui.cpp  AiePlugin.Workspace.cpp  AiePlugin.cpp  AiePlugin.json  AiePluginResources.qrc  AiePropertiesShortcutController.cpp  AiePropertiesShortcutController.hpp  AieService.cpp  AieService.hpp  AieStyleCatalog.cpp  AieStyleCatalog.hpp  CMakeLists.txt  NpuProfile.hpp  NpuProfileCanvasMapper.cpp  NpuProfileCanvasMapper.hpp  NpuProfileLoader.cpp  NpuProfileLoader.hpp
src/plugins/aieplugin/api/: IAieHost.hpp
src/plugins/aieplugin/design/: CanvasDocumentImporter.cpp  CanvasDocumentImporter.hpp  DesignBundleCreator.cpp  DesignBundleCreator.hpp  DesignBundleLoader.cpp  DesignBundleLoader.hpp  DesignModel.cpp  DesignModel.hpp  DesignOpenController.cpp  DesignOpenController.hpp  DesignPersistenceController.cpp  DesignPersistenceController.hpp  DesignState.hpp  (+4 more)
src/plugins/canvas/: CMakeLists.txt  Canvas.json  CanvasBlock.cpp  CanvasBlock.hpp  CanvasBlockContent.cpp  CanvasBlockContent.hpp  CanvasCommand.hpp  CanvasCommandManager.cpp  CanvasCommandManager.hpp  CanvasCommands.cpp  CanvasCommands.hpp  CanvasConstants.hpp  CanvasController.cpp  CanvasController.hpp  CanvasControlsPanel.cpp  CanvasControlsPanel.hpp  CanvasDocument.cpp  CanvasDocument.hpp  CanvasFabric.cpp  CanvasFabric.hpp  CanvasFabricRouter.cpp  CanvasFabricRouter.hpp  CanvasGlobal.hpp  CanvasInteractionTypes.hpp  CanvasItem.hpp  CanvasLinkRouteEditor.cpp  CanvasLinkRouteEditor.hpp  CanvasPlugin.cpp  CanvasPlugin.hpp  CanvasPorts.hpp  CanvasPrimitives.hpp  CanvasRenderContext.hpp  CanvasRenderOptions.hpp  CanvasScene.cpp  CanvasScene.hpp  CanvasSceneModel.cpp  CanvasSceneModel.hpp  CanvasSelectionModel.cpp  CanvasSelectionModel.hpp  CanvasService.cpp  (+14 more)
src/plugins/codeeditor/: CMakeLists.txt  CodeEditor.json  CodeEditorGlobal.hpp  CodeEditorPlugin.cpp  CodeEditorTextView.cpp  CodeEditorTextView.hpp  Constants.hpp
src/plugins/command/: CMakeLists.txt  CommandPluginGlobal.hpp  CommandResult.hpp  CommandTransaction.cpp  DesignCommand.hpp
src/plugins/core/: CMakeLists.txt  CommandRibbon.cpp  CommandRibbon.hpp  Core.json  CoreConstants.hpp  CoreGlobal.hpp  CoreImpl.cpp  CoreImpl.hpp  CorePlugin.cpp  CorePlugin.hpp  GlobalMenuBar.cpp  GlobalMenuBar.hpp  HeaderInfoService.cpp  HeaderInfoService.hpp  ICore.hpp  SidebarModel.cpp  SidebarModel.hpp  SidebarRegistryImpl.cpp  SidebarRegistryImpl.hpp  SidebarWidthBudget.hpp  StatusBarField.cpp  StatusBarField.hpp  core.cpp  core.hpp
src/plugins/designmodel/: DesignDocument.cpp  DesignDocument.hpp  DesignEntities.hpp  DesignId.hpp  DesignIndex.cpp  DesignIndex.hpp  DesignModelPlugin.cpp  Tile.cpp
src/plugins/projectexplorer/: CMakeLists.txt  ProjectExplorer.json  ProjectExplorerActions.cpp  ProjectExplorerActions.hpp  ProjectExplorerDataSource.cpp  ProjectExplorerDataSource.hpp  ProjectExplorerFilterModel.cpp  ProjectExplorerFilterModel.hpp  ProjectExplorerGlobal.hpp  ProjectExplorerIconProvider.cpp  ProjectExplorerIconProvider.hpp  ProjectExplorerModel.cpp  ProjectExplorerModel.hpp  ProjectExplorerPanel.cpp  ProjectExplorerPanel.hpp  ProjectExplorerPlugin.cpp  ProjectExplorerService.cpp  ProjectExplorerService.hpp  ProjectExplorerTreeState.cpp  ProjectExplorerTreeState.hpp
(+464 files in other folders)
